--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -321,6 +321,7 @@ jobs:
       label_doc_changes: ${{ steps.check_labels.outputs.label_doc_changes }}
       run_copyright: ${{ steps.check_labels.outputs.run_copyright }}
       label_copyright: ${{ steps.check_labels.outputs.label_copyright }}
+      run_doc_reference: true
       run_markdown: ${{ steps.check_labels.outputs.run_markdown }}
       label_markdown: ${{ steps.check_labels.outputs.label_markdown }}
       run_grafana_dashboard: ${{ steps.check_labels.outputs.run_grafana_dashboard }}
@@ -471,6 +472,35 @@ jobs:
         run: |
           make lint-doc-spellcheck-pr
        # </template: spellcheck_template>
+
+  doc_validation_reference:
+    name: Docs Validation (reference)
+
+    needs:
+      - discover
+      - pull_request_info
+    if: needs.discover.outputs.run_doc_reference == 'true'
+    runs-on: ubuntu-24.04
+    steps:
+
+      # <template: checkout_step>
+      - name: Checkout sources
+        uses: actions/checkout@v3.5.2
+        with:
+          ref: ${{ needs.pull_request_info.outputs.ref }}
+      # </template: checkout_step>
+
+      - name: Restore diff artifact
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: pr_diff
+
+      - name: Run check
+        env:
+          DIFF_PATH: ./pr.diff
+          SKIP_LABEL_NAME: ${{ needs.discover.outputs.label_doc_reference }}
+        run: |
+          ./.github/scripts/validation_run.sh ./testing/validate_doc_reference.sh
 
   copyright_validation:
     name: Copyright Validation
