--- a/.github/workflow_templates/build-and-test_release.yml
+++ b/.github/workflow_templates/build-and-test_release.yml
@@ -122,6 +122,17 @@ jobs:
       - check_branch_name
 {!{ tmpl.Exec "workflow_render_template" $ctx | strings.Indent 4 }!}
 
+  check_changelog:
+    name: Check changelog
+{!{ tmpl.Exec "check_changelog_template" $ctx | strings.Indent 4 }!}
+
+  build_fe:
+    name: Build FE
+    needs:
+      - git_info
+      - go_generate
+      - workflow_render
+      - check_changelog
   build_fe:
     name: Build FE
     needs:
